==================================
Rilascio v2.0.7     del 01/05/2017
==================================

ryQuiver: aggiunta la gestione di transcodifiche.

ryQue, ryUnbound: corretti errori di refresh.

Kanagawa: abilitato Legend alla gestione di big data.

==================================
Rilascio v2.0.6     del 28/03/2017
==================================

Utilizzata la centratura dei form.

==================================
Rilascio v2.0.5     del 26/03/2017
==================================

rytabs: possibilità di centrare il contenuto;

Aggiunto un gradiente come sfondo dei form.

Aggiunta la chiave per l'utilizzo delle mappe di Google.

Migliorato Postman.

==================================
Rilascio v2.0.4    del 15/03/2017
==================================

ryunbound: con autofit vengono preservate le colonne di larghezza zero.

==================================
Rilascio v2.0.3    del 18/10/2016
==================================

ContextMenu: corretto il riposizionamento in caso di sbordo.

==================================
Rilascio v2.0.2    del 04/10/2016
==================================

rytabs e ryque: ripensati i colori.

==================================
Rilascio v2.0.1    del 04/07/2016
==================================

rycode: coretto il posizionamento dell'icona "clear" alla move.

ryunbound: tolta la disabilitazione dell'helper in caso di editmode attivo.

==================================
Rilascio v2.0.0    del 15/06/2016
==================================

ryLabel: aggiunte le proprietà "align" e "color".

ryDraw: aggiunto border a ryPie e gestito background in ryGram.

ryScript: aggiunto il metodo "refresh"; corretto il funzionamento dell'intellisense.

ryUnbound: migliorato il comportamento dell'editmode.

QVUSERS, QVROLES: aggiunto il campo REGISTRY.

ryFamily: corretto il comportamento alla focus.

==================================
Rilascio 1.70.28    del 06/04/2016
==================================
